--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,17 @@
-<html>
-<form action="redirect" method="post">
-    <input type="text" name="Nmae" placeholder="Name">
-    <input type="password" placeholder="password">
-    <input type="Submit" name="Submit">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web form</title>
+</head>
+<body>
 
-</html>
+    <h2>
+        <p>Srinithin-Bagiya Apprencio Task</p>
+        <p>This is a web form we created for apprencio S2 for answering the commonality questions</p>
+    </h2>
+    <a href = "/commanlist">Next</a><br>  
+</body>
+</html> 
